test/errors/python_error/zs/generated_symbols/structure_public_method_property_clash_error.zs
package generated_symbols.structure_public_method_property_clash_error;

struct TestStructure
{
    uint32 read; // clashes with generated API
};
